base/sysinfo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sysinfo-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /si
        pathType: Prefix
        backend:
          service:
            name: sysinfo-service
            port:
              number: 80
